refactor(role-jpa-entity): remove unncessary setter